--- a/Base/res/html/misc/gradients.html
+++ b/Base/res/html/misc/gradients.html
@@ -91,6 +91,11 @@
         .grad-14 {
             background-image: linear-gradient(to bottom right,  indigo, white, deeppink);
         }
+
+        .grad-15 {
+            background-image: linear-gradient(to top left, red, green, blue);
+            background-size: 30px 30px;
+        }
     </style>
   </head>
   <body>
@@ -116,6 +121,8 @@
     <div class="rect grad-12"></div>
     <div class="rect grad-13"></div>
     <div class="rect grad-14"></div>
+    <b>With background size:</b><br>
+    <div class="rect grad-15"></div>
   </body>
   <script>
     const boxes = document.querySelectorAll(".box, .rect");
