--- a/Base/res/html/misc/gradients.html
+++ b/Base/res/html/misc/gradients.html
@@ -145,11 +145,17 @@
         }
 
         .grad-conic-2 {
-            background-image: conic-gradient(from 0.25turn, #f69d3c, 10deg, #3f87a6, 350deg, #ebf8e1);
+            background-image: conic-gradient(from 0.25turn at 50% 30%, #f69d3c, 10deg, #3f87a6, 350deg, #ebf8e1);
         }
 
         .grad-conic-3 {
-            background-image: conic-gradient(from 3.1416rad, #e66465, #9198e5);
+            background-image: conic-gradient(from 3.1416rad at 10% 50%, #e66465, #9198e5);
+        }
+
+        .grad-conic-4 {
+            background-image: conic-gradient(
+                red 6deg, orange 6deg 18deg, yellow 18deg 45deg,
+                green 45deg 110deg, blue 110deg 200deg, purple 200deg);
         }
     </style>
   </head>
@@ -195,6 +201,7 @@
     <div class="box grad-conic-1"></div>
     <div class="box grad-conic-2"></div>
     <div class="box grad-conic-3"></div>
+    <div class="box grad-conic-4"></div>
   </body>
   <script>
     const boxes = document.querySelectorAll(".box, .rect");
