--- a/Base/res/html/misc/gradients.html
+++ b/Base/res/html/misc/gradients.html
@@ -194,6 +194,10 @@
         .grad-radial-3 {
             background-image: radial-gradient(circle at 100px, #333, #333 50%, #eee 75%, #333 75%);
         }
+
+        .grad-radial-4 {
+            background-image: radial-gradient(200px 100px ellipse at 25% 50%, yellow, #009966, purple);
+        }
     </style>
   </head>
   <body>
@@ -245,9 +249,10 @@
     <div class="box grad-conic-repeat-1"></div>
     <div class="box grad-conic-repeat-2"></div>
     <b>Radial gradients</b><br>
-    <div class="box grad-radial-1"></div>
-    <div class="box grad-radial-2"></div>
-    <div class="box grad-radial-3"></div>
+    <div class="rect grad-radial-1"></div>
+    <div class="rect grad-radial-2"></div>
+    <div class="rect grad-radial-3"></div>
+    <div class="rect grad-radial-4"></div>
   </body>
   <script>
     const boxes = document.querySelectorAll(".box, .rect");
